src/test/deca/context/invalid/sum_bad_type4.deca
// Description:
//    Déclaration de variable
//
// Resultats:
//    Ligne 11 : mauvais typage de la somme
// 

{
    boolean a;
    a = null + void;
}
